kubectl/backend-user.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: backend-user
  name: backend-user
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: backend-user
  template:
    metadata:
      labels:
        service: backend-user
    spec:
      containers:
        - image: 39660806/udagram-api-user
          name: backend-user
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: backend-user
  name: backend-user
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    service: backend-user
