kubectl/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      service: frontend
      api: external
  template:
    metadata:
      labels:
        service: frontend
        api: external
    spec:
      containers:
        - image: 39660806/udagram-frontend
          name: frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  type: ClusterIP
  selector:
    service: frontend
  ports:
    - port: 8082
      targetPort: 8082
